--- a/flash-fhir/pom.xml
+++ b/flash-fhir/pom.xml
@@ -12,7 +12,7 @@
   <packaging>jar</packaging>
   <properties>
     <jacoco.coverage>0.60</jacoco.coverage>
-    <vistalink.api.version>2.0.0-SNAPSHOT</vistalink.api.version>
+    <vistalink.api.version>2.0.0</vistalink.api.version>
   </properties>
   <dependencies>
     <dependency>
