--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
     <artifactId>health-apis-parent</artifactId>
     <version>7.0.20</version>
   </parent>
-  <artifactId>flash-fhir-parent</artifactId>
+  <artifactId>vista-fhir-query-parent</artifactId>
   <version>0.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
-    <module>flash-fhir</module>
+    <module>vista-fhir-query</module>
   </modules>
 </project>
