--- a/vista-fhir-query/pom.xml
+++ b/vista-fhir-query/pom.xml
@@ -7,7 +7,7 @@
     <version>7.0.20</version>
     <relativePath/>
   </parent>
-  <artifactId>flash-fhir</artifactId>
+  <artifactId>vista-fhir-query</artifactId>
   <version>0.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <properties>
