--- a/vista-fhir-query/pom.xml
+++ b/vista-fhir-query/pom.xml
@@ -15,6 +15,8 @@
     <jacoco.coverage>0.80</jacoco.coverage>
     <talos.version>0.0.1</talos.version>
     <vistalink.api.version>2.0.0</vistalink.api.version>
+    <fhir-resources.version>5.0.18</fhir-resources.version>
+    <vistalink.models.version>2.0.8</vistalink.models.version>
   </properties>
   <dependencies>
     <dependency>
@@ -35,6 +37,16 @@
       <groupId>gov.va.api.lighthouse</groupId>
       <artifactId>vistalink-api</artifactId>
       <version>${vistalink.api.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>gov.va.api.lighthouse</groupId>
+      <artifactId>vistalink-models</artifactId>
+      <version>${vistalink.models.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>us-core-r4</artifactId>
+      <version>${fhir-resources.version}</version>
     </dependency>
   </dependencies>
 </project>
