--- a/vista-fhir-query/pom.xml
+++ b/vista-fhir-query/pom.xml
@@ -15,8 +15,7 @@
     <fhir-resources.version>5.0.18</fhir-resources.version>
     <jacoco.coverage>0.92</jacoco.coverage>
     <talos.version>0.0.1</talos.version>
-    <!-- ToDo dont use snapshot -->
-    <vistalink.version>2.0.11-SNAPSHOT</vistalink.version>
+    <vistalink.version>2.0.12</vistalink.version>
   </properties>
   <dependencies>
     <dependency>
