--- a/vista-fhir-query-ids-mapping/pom.xml
+++ b/vista-fhir-query-ids-mapping/pom.xml
@@ -2,17 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
+    <artifactId>api-starter</artifactId>
     <groupId>gov.va.api.health</groupId>
-    <artifactId>health-apis-parent</artifactId>
     <version>7.0.20</version>
   </parent>
-  <artifactId>vista-fhir-query-parent</artifactId>
+  <artifactId>vista-fhir-query-ids-mapping</artifactId>
   <version>0.0.17-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <modules>
-    <module>vista-fhir-query-ids-mapping</module>
-    <module>vista-fhir-query</module>
-    <module>vista-fhir-query-mock-services</module>
-    <module>vista-fhir-query-tests</module>
-  </modules>
+  <packaging>jar</packaging>
+  <properties>
+    <ids.version>3.0.5</ids.version>
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>ids-client</artifactId>
+      <version>${ids.version}</version>
+    </dependency>
+  </dependencies>
 </project>
