--- a/vista-fhir-query/src/main/resources/application.properties
+++ b/vista-fhir-query/src/main/resources/application.properties
@@ -17,6 +17,9 @@ vistalink.api.client-key=unset
 vistalink.api.access-code=unset
 vistalink.api.verify-code=unset
 
+# Fake Ids
+fake-ids.enabled=false
+
 # Database Configs
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=unset
