--- a/vista-fhir-query/src/main/resources/application.properties
+++ b/vista-fhir-query/src/main/resources/application.properties
@@ -17,8 +17,9 @@ vistalink.api.client-key=unset
 vistalink.api.access-code=unset
 vistalink.api.verify-code=unset
 
-# Fake Ids
-fake-ids.enabled=false
+# Alternate Patient Ids
+alternate-patient-ids.enabled=false
+alternate-patient-ids.parameters=patient
 
 # Database Configs
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
