--- a/vista-fhir-query/src/main/resources/application.properties
+++ b/vista-fhir-query/src/main/resources/application.properties
@@ -15,8 +15,10 @@ vista-fhir-query.max-page-size=100
 # Vistalink API Configs
 vista.api.url=unset
 vista.api.client-key=unset
+vista.api.authentication-type=STANDARD_USER
 vista.api.access-code=unset
 vista.api.verify-code=unset
+vista.api.application-proxy-user=unset
 
 # Alternate Patient Ids
 alternate-patient-ids.enabled=false
