--- a/vista-fhir-query/pom.xml
+++ b/vista-fhir-query/pom.xml
@@ -16,7 +16,7 @@
     <jacoco.coverage>0.94</jacoco.coverage>
     <mssql-jdbc.version>7.4.1.jre8</mssql-jdbc.version>
     <talos.version>0.0.4</talos.version>
-    <charon.version>3.0.21</charon.version>
+    <charon.version>3.0.25-SNAPSHOT</charon.version>
   </properties>
   <dependencies>
     <dependency>
