--- a/vista-fhir-query/src/main/resources/application.properties
+++ b/vista-fhir-query/src/main/resources/application.properties
@@ -21,6 +21,7 @@ vista.api.url=unset
 vista.api.client-key=unset
 vista.api.access-code=unset
 vista.api.verify-code=unset
+vista.api.principal-file=config\/principals.json
 
 # Alternate Patient Ids
 alternate-patient-ids.enabled=false
