--- a/vista-fhir-query-tests/pom.xml
+++ b/vista-fhir-query-tests/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>gov.va.api.health</groupId>
     <artifactId>test-starter</artifactId>
-    <version>7.0.25</version>
+    <version>8.0.6</version>
     <relativePath/>
   </parent>
   <artifactId>vista-fhir-query-tests</artifactId>
@@ -13,6 +13,7 @@
   <properties>
     <fhir-resources.version>6.0.10</fhir-resources.version>
     <sentinel.skipLaunch>false</sentinel.skipLaunch>
+    <junit-vintage-engine.version>5.7.2</junit-vintage-engine.version>
   </properties>
   <dependencies>
     <dependency>
@@ -30,6 +31,11 @@
       <groupId>gov.va.api.health</groupId>
       <artifactId>sentinel</artifactId>
       <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+      <version>${junit-vintage-engine.version}</version>
     </dependency>
     <dependency>
       <groupId>gov.va.api.health</groupId>
@@ -129,7 +135,7 @@
                 <argument>-Dspring.jpa.generate-ddl=false</argument>
                 <argument>-Dspring.jpa.hibernate.ddl-auto=none</argument>
                 <argument>-Dspring.jpa.properties.hibernate.globally_quoted_identifiers=false</argument>
-                <argument>-Dspring.config.location=classpath:/application.properties,file:${project.basedir}/config/secrets.properties</argument>
+                <argument>-Dspring.config.additional-location=classpath:/application.properties,file:${project.basedir}/config/secrets.properties</argument>
                 <argument>org.springframework.boot.loader.PropertiesLauncher</argument>
               </arguments>
             </configuration>
