--- a/vista-fhir-query-tests/pom.xml
+++ b/vista-fhir-query-tests/pom.xml
@@ -13,7 +13,6 @@
   <properties>
     <fhir-resources.version>6.0.10</fhir-resources.version>
     <sentinel.skipLaunch>false</sentinel.skipLaunch>
-    <junit-vintage-engine.version>5.7.2</junit-vintage-engine.version>
   </properties>
   <dependencies>
     <dependency>
@@ -35,7 +34,7 @@
     <dependency>
       <groupId>org.junit.vintage</groupId>
       <artifactId>junit-vintage-engine</artifactId>
-      <version>${junit-vintage-engine.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>gov.va.api.health</groupId>
