--- a/vista-fhir-query-tests/pom.xml
+++ b/vista-fhir-query-tests/pom.xml
@@ -134,7 +134,7 @@
                 <argument>-Dspring.jpa.generate-ddl=false</argument>
                 <argument>-Dspring.jpa.hibernate.ddl-auto=none</argument>
                 <argument>-Dspring.jpa.properties.hibernate.globally_quoted_identifiers=false</argument>
-                <argument>-Dspring.config.additional-location=classpath:/application.properties,file:${project.basedir}/config/secrets.properties</argument>
+                <argument>-Dspring.config.import=classpath:/application.properties,optional:file:${project.basedir}/config/secrets.properties</argument>
                 <argument>org.springframework.boot.loader.PropertiesLauncher</argument>
               </arguments>
             </configuration>
