come on, formatter..

--- a/vista-fhir-query/pom.xml
+++ b/vista-fhir-query/pom.xml
@@ -1,174 +1,172 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>gov.va.api.health</groupId>
-        <artifactId>service-starter</artifactId>
-        <version>8.0.20</version>
-        <relativePath/>
-    </parent>
-    <artifactId>vista-fhir-query</artifactId>
-    <version>1.0.5-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <properties>
-        <charon.version>4.0.4</charon.version>
-        <fhir-resources.version>7.0.7</fhir-resources.version>
-        <jacoco.coverage>0.94</jacoco.coverage>
-        <mssql-jdbc.version>9.2.1.jre15</mssql-jdbc.version>
-        <swagger-maven-plugin.version>2.1.9</swagger-maven-plugin.version>
-        <talos.version>1.0.0</talos.version>
-        <swagger-examples-maven-plugin.version>3.0.0</swagger-examples-maven-plugin.version>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>gov.va.api.lighthouse</groupId>
-            <artifactId>charon-api</artifactId>
-            <version>${charon.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>gov.va.api.lighthouse</groupId>
-            <artifactId>charon-models</artifactId>
-            <version>${charon.version}</version>
-        </dependency>
-        <dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>gov.va.api.health</groupId>
+    <artifactId>service-starter</artifactId>
+    <version>8.0.20</version>
+    <relativePath/>
+  </parent>
+  <artifactId>vista-fhir-query</artifactId>
+  <version>1.0.5-SNAPSHOT</version>
+  <packaging>jar</packaging>
+  <properties>
+    <charon.version>4.0.4</charon.version>
+    <fhir-resources.version>7.0.7</fhir-resources.version>
+    <jacoco.coverage>0.94</jacoco.coverage>
+    <mssql-jdbc.version>9.2.1.jre15</mssql-jdbc.version>
+    <swagger-maven-plugin.version>2.1.9</swagger-maven-plugin.version>
+    <talos.version>1.0.0</talos.version>
+    <swagger-examples-maven-plugin.version>3.0.0</swagger-examples-maven-plugin.version>
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>gov.va.api.lighthouse</groupId>
+      <artifactId>charon-api</artifactId>
+      <version>${charon.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>gov.va.api.lighthouse</groupId>
+      <artifactId>charon-models</artifactId>
+      <version>${charon.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>us-core-r4</artifactId>
+      <version>${fhir-resources.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.microsoft.sqlserver</groupId>
+      <artifactId>mssql-jdbc</artifactId>
+      <version>${mssql-jdbc.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>service-auto-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>gov.va.api.lighthouse</groupId>
+      <artifactId>talos</artifactId>
+      <version>${talos.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>vista-fhir-query-ids-mapping</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <optional>true</optional>
+    </dependency>
+  </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>io.swagger.core.v3</groupId>
+        <artifactId>swagger-maven-plugin</artifactId>
+        <version>${swagger-maven-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>r4-swag</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>resolve</goal>
+            </goals>
+            <configuration>
+              <contextId>r4-openapi</contextId>
+              <resourceClasses>
+                <resourceClass>gov.va.api.health.vistafhirquery.service.api.R4VistaFhirQueryService</resourceClass>
+              </resourceClasses>
+              <outputFileName>r4-openapi</outputFileName>
+              <outputPath>${project.build.outputDirectory}</outputPath>
+              <outputFormat>JSON</outputFormat>
+              <prettyPrint>true</prettyPrint>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>gov.va.plugin.maven</groupId>
+        <artifactId>swagger-examples-maven-plugin</artifactId>
+        <version>${swagger-examples-maven-plugin.version}</version>
+        <dependencies>
+          <dependency>
             <groupId>gov.va.api.health</groupId>
-            <artifactId>us-core-r4</artifactId>
+            <artifactId>us-core-r4-examples</artifactId>
             <version>${fhir-resources.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
-            <version>${mssql-jdbc.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>gov.va.api.health</groupId>
-            <artifactId>service-auto-config</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>gov.va.api.lighthouse</groupId>
-            <artifactId>talos</artifactId>
-            <version>${talos.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>vista-fhir-query-ids-mapping</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
-        </dependency>
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>io.swagger.core.v3</groupId>
-                <artifactId>swagger-maven-plugin</artifactId>
-                <version>${swagger-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>r4-swag</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>resolve</goal>
-                        </goals>
-                        <configuration>
-                            <contextId>r4-openapi</contextId>
-                            <resourceClasses>
-                                <resourceClass>gov.va.api.health.vistafhirquery.service.api.R4VistaFhirQueryService
-                                </resourceClass>
-                            </resourceClasses>
-                            <outputFileName>r4-openapi</outputFileName>
-                            <outputPath>${project.build.outputDirectory}</outputPath>
-                            <outputFormat>JSON</outputFormat>
-                            <prettyPrint>true</prettyPrint>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>gov.va.plugin.maven</groupId>
-                <artifactId>swagger-examples-maven-plugin</artifactId>
-                <version>${swagger-examples-maven-plugin.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>gov.va.api.health</groupId>
-                        <artifactId>us-core-r4-examples</artifactId>
-                        <version>${fhir-resources.version}</version>
-                        <scope>runtime</scope>
-                    </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <id>inject-examples</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>inject</goal>
-                        </goals>
-                        <configuration>
-                            <files>
-                                <file file="${project.build.outputDirectory}/r4-openapi.json" format="JSON"/>
-                            </files>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <!--
+            <scope>runtime</scope>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <id>inject-examples</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>inject</goal>
+            </goals>
+            <configuration>
+              <files>
+                <file file="${project.build.outputDirectory}/r4-openapi.json" format="JSON"/>
+              </files>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!--
               Needed by health-apis-datamart-synthetic-records to
               access entities and populate the database.
             -->
-            <plugin>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>library-jar</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                        <configuration>
-                            <classifier>library</classifier>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>test-jar</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>metadata-timestamp</id>
-                        <goals>
-                            <goal>timestamp-property</goal>
-                        </goals>
-                        <configuration>
-                            <name>metadata.publication-date</name>
-                            <pattern>yyyy-MM-dd'T'HH:mm:ss'Z'</pattern>
-                            <timeZone>UTC</timeZone>
-                            <locale>en_US</locale>
-                            <unit>second</unit>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>library-jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <classifier>library</classifier>
+            </configuration>
+          </execution>
+          <execution>
+            <id>test-jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>metadata-timestamp</id>
+            <goals>
+              <goal>timestamp-property</goal>
+            </goals>
+            <configuration>
+              <name>metadata.publication-date</name>
+              <pattern>yyyy-MM-dd'T'HH:mm:ss'Z'</pattern>
+              <timeZone>UTC</timeZone>
+              <locale>en_US</locale>
+              <unit>second</unit>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
