--- a/vista-fhir-query-tests/pom.xml
+++ b/vista-fhir-query-tests/pom.xml
@@ -120,6 +120,7 @@
                 <argument>-Dvista.api.url=http://localhost:8096</argument>
                 <argument>-Dvista.api.application-proxy-user-context=MOCKSERVICES</argument>
                 <argument>-Dvista.api.principal-file=${project.basedir}/../vista-fhir-query/src/test/resources/principal-and-site-specific-principals.json</argument>
+                <argument>-Dvista-fhir-query.rpc-principals.file=${project.basedir}/../vista-fhir-query/src/test/resources/principals.json</argument>
                 <argument>-Dvista-fhir-query.internal.client-keys=~shanktopus~</argument>
                 <argument>-Dvista-fhir-query.public-web-exception-key=-shanktopus-for-the-win-</argument>
                 <argument>-Dids-client.encoded-ids.i2-enabled=true</argument>
