--- a/vista-fhir-query/src/main/resources/application.properties
+++ b/vista-fhir-query/src/main/resources/application.properties
@@ -14,6 +14,7 @@ ids-client.encoded-ids.i3-enabled=true
 ids-client.encoded-ids.encoding-key=unset
 
 # Vista-Fhir-Query Configs
+vista-fhir-query.rpc-principals.file=unset
 vista-fhir-query.internal.client-keys=unset
 vista-fhir-query.public-url=unset
 vista-fhir-query.public-r4-base-path=unset
