fix context property

--- a/vista-fhir-query/src/main/resources/application.properties
+++ b/vista-fhir-query/src/main/resources/application.properties
@@ -26,6 +26,7 @@ vista-fhir-query.max-page-size=100
 backend-health.charon.health-check-url=unset
 vista.api.url=unset
 vista.api.client-key=unset
+vista.api.vpr-get-patient-data-context=unset
 
 # Alternate Patient Ids
 alternate-patient-ids.enabled=false
