--- a/vista-fhir-query-mock-services/pom.xml
+++ b/vista-fhir-query-mock-services/pom.xml
@@ -12,7 +12,7 @@
   <packaging>jar</packaging>
   <properties>
     <mockserver.version>5.11.2</mockserver.version>
-    <charon.version>4.0.20-SNAPSHOT</charon.version>
+    <charon.version>4.0.20</charon.version>
   </properties>
   <dependencies>
     <dependency>
