--- a/vista-fhir-query/pom.xml
+++ b/vista-fhir-query/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>gov.va.api.health</groupId>
@@ -12,13 +11,8 @@
   <version>1.0.35-SNAPSHOT</version>
   <packaging>jar</packaging>
   <properties>
-<<<<<<< HEAD
     <charon.version>4.0.20-SNAPSHOT</charon.version>
     <fhir-resources.version>8.0.6</fhir-resources.version>
-=======
-    <charon.version>4.0.19</charon.version>
-    <fhir-resources.version>8.0.5</fhir-resources.version>
->>>>>>> master
     <jacoco.coverage>0.94</jacoco.coverage>
     <mssql-jdbc.version>9.2.1.jre15</mssql-jdbc.version>
     <swagger-maven-plugin.version>2.1.9</swagger-maven-plugin.version>
